--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,12 +1,35 @@
 .HeaderNav {
-    display: flex;
+    /* display: flex;
     align-items: first baseline;
     justify-content: space-between;
     padding: 20px 44px;
-    background-color: #141414;
+
     height: 50px;
     font-size: 14px;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), transparent);
+    transition: background-color 0.3s ease, background 0.3s ease; */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 48px;
+    height: 68px;
+    box-sizing: border-box;
+
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), transparent);
+    transition: background 0.3s ease;
+}
+
+.HeaderNav.scrolled {
+    background: #141414;
 }
 
 .primary-navigation {
@@ -45,7 +68,7 @@
 
 .secondary-navigation {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     gap: 16px;
 }
 
@@ -187,6 +210,7 @@
 
 .HeaderNav .navigation-desktop {
     display: none;
+    padding-left: 0;
 }
 
 .HeaderNav .navigation-mobile {
