기본컴포넌트  구조 정리  및 css 스타일  수정

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,5 @@
 
-.HeaderNav {
+/* .HeaderNav {
     display: flex;
     align-items: first baseline;
     justify-content: space-between;
@@ -8,6 +8,19 @@
     height: 50px;
     font-size: 14px;
     position: relative;
+} */
+.HeaderNav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 30px;
+    z-index: 1;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
 }
 
 .primary-navigation {
