--- a/src/styles/ContentRow.css
+++ b/src/styles/ContentRow.css
@@ -88,18 +88,18 @@
 }
 
 .content-item {
-    position: relative;
-    width: 180px;
+    width: 227px;
+    height: 128px;
+    object-fit: cover;
+    border-radius: 4px;
     flex-shrink: 0;
     flex: 0 0 15%;
-    
+    overflow: hidden;
 }
 
 .content-item img {
-    width: 227px;
-    height: 128px;
-    -o-object-fit: cover;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    position: absolute;
-    border-radius: 4px;
+    display: block;
 }
