--- a/src/styles/TrailerSection.css
+++ b/src/styles/TrailerSection.css
@@ -1,6 +1,6 @@
 .trailer {
     position: relative;
-    height: 300px;
+    height: 550px;
     overflow: hidden;
     color: #fff;
     justify-content: space-between;
@@ -8,17 +8,9 @@
 
 .trailer-video {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-}
-
-.trailer-video video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    color: white;
+    object-fit: contain;
+    height: 448px;
 }
 
 .trailer-wrapper {
@@ -49,24 +41,26 @@
 .play-btn {
     background-color: white;
     color: black;
-    width: 100px;
-    height: 35px;
+    width: 125px;
+    height: 45px;
 }
   
 .info-btn {
     background-color: rgba(109, 109, 110, 0.7);
     color: white;
-    width: 120px;
-    height: 35px;
+    width: 150px;
+    height: 45px;
 }
 
 .play-btn, .info-btn {
     display: flex;
     padding: 10px 16px;
-    font-size: 13px;
+    font-size: 18px;
+    font-weight: 500;
     border: none;
     border-radius: 4px;
     gap: 10px;
+    justify-content: center;
     align-items: center;
 }
 
@@ -81,14 +75,14 @@
     display: flex;
     position: absolute;
     gap: 12px;
-    right: 2rem;
+    right: 4rem;
     align-items: center;
 }
 
 .trailer-controls-btns button {
-    width: 25px;
-    height: 25px;
-    border: 1.5px solid white;
+    width: 40px;
+    height: 40px;
+    border: 0.8px solid white;
     border-radius: 50%;
     background-color: transparent;
     color: #fff;
@@ -100,7 +94,7 @@
   }
 
 .trailer-controls-btns svg {
-    width: 15px;
+    width: 22px;
     height: auto;
 }
 
@@ -115,8 +109,8 @@
 
     background-color: rgba(51, 51, 51, 0.6);
     width: 35px;
-    height: 10px;
-    padding: 8px 16px;
+    height: 20px;
+    padding: 8px 30px;
     border-left: 2px solid white;
 
     text-align: left;
@@ -124,7 +118,7 @@
     color: white;
 }
 
-.age-badge span {
+.age-badge svg {
     display: block;
-    text-align: left;
+    right: 30px;
 }
