fix: search-container 중복으로 인한 css 설정 오류 수정

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -68,7 +68,7 @@
     color: white !important;
 }
 
-.search-container {
+.header-search-container {
     display: flex;
     align-items: center;
     position: relative;
