--- a/src/styles/ContentRow.css
+++ b/src/styles/ContentRow.css
@@ -11,7 +11,8 @@
   position: relative;
 }
 
-.slide-btn-left {
+.slide-btn-left,
+.slide-btn-right {
   background-clip: content-box;
   padding: 20px 0;
   box-sizing: border-box;
@@ -20,59 +21,39 @@
   width: 80px;
   z-index: 1000;
   position: absolute;
-  left: 0;
-  top: 0;
+  top: 50%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   visibility: hidden;
-  background: none; /* 배경색 제거 */
-  border: none; /* 테두리 제거 */
+  background: none;
+  border: none;
+}
+
+.slide-btn-left {
+  left: 0;
 }
 
 .slide-btn-right {
-  padding: 20px 0;
-  background-clip: content-box;
-  box-sizing: border-box;
-  transition: 400ms all ease-in-out;
-  cursor: pointer;
-  width: 80px;
-  z-index: 1000;
-  position: absolute;
   right: 0;
-  top: 0;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  visibility: hidden;
-  background: none; /* 배경색 제거 */
-  border: none; /* 테두리 제거 */
 }
 
 .slide-btn-left svg,
 .slide-btn-right svg {
   transition: 400ms all ease-in-out;
-  stroke: white; /* 화살표 색상 변경 */
+  stroke: white;
 }
 
 .slide-btn-left:hover svg,
 .slide-btn-right:hover svg {
-  transition: 400ms all ease-in-out;
   transform: scale(1.5);
 }
 
-.row:hover .slide-btn-left {
-  transition: 400ms all ease-in-out;
-  visibility: visible;
-  background: rgba(20, 20, 20, 0.5); /* 호버 시 배경색 적용 */
-}
-
+.row:hover .slide-btn-left,
 .row:hover .slide-btn-right {
-  transition: 400ms all ease-in-out;
   visibility: visible;
-  background: rgba(20, 20, 20, 0.5); /* 호버 시 배경색 적용 */
+  background: rgba(20, 20, 20, 0.5);
 }
 
 .row-posters {
@@ -92,9 +73,9 @@
 }
 
 .row__poster {
-  object-fit: contain;
+  object-fit: cover;
   width: 100%;
-  max-height: 144px;
+  max-height: 128px !important;
   transition: transform 450ms;
   border-radius: 4px;
 }
@@ -125,10 +106,7 @@
   background: white !important;
 }
 
-.swiper-button-prev {
-  color: white !important;
-}
-
+.swiper-button-prev,
 .swiper-button-next {
   color: white !important;
 }
