--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -42,7 +42,7 @@
     justify-content: flex-start;
     flex-wrap: nowrap;
     gap: 24px 60px;
-    margin-top: 24px;
+    margin-top: 0px;
     width: 100%;
 }
 
@@ -74,7 +74,7 @@
     background-color: transparent;
     border: 1px solid #666;
     color: #737373;
-    margin: 40px 0 0 0;
+    margin: 16px 0 0 0;
     padding: 6px 10px;
     font-size: 13px;
     cursor: pointer;
@@ -94,10 +94,11 @@
     flex-direction: column;
     align-items: flex-start;
     text-align: left;
-    margin: 20px 0 0 0;
+    margin: 0 0 0 0;
     max-width: 980px;
     padding: 0 0;
     gap: 6px;
+    margin-top: 0;
 }
 
 .copy-text-block {
