--- a/src/styles/RankingRow.css
+++ b/src/styles/RankingRow.css
@@ -82,7 +82,7 @@
 }
 
 .ranking-number {
-  font-size: 100px;
+  font-size: 150px;
   font-weight: bold;
   color: black;
   -webkit-text-stroke: 2px gray;
@@ -92,7 +92,7 @@
 
 .ranking-poster {
   width: 100%;
-  height: 480px !important;
+  height: 240px !important;
   aspect-ratio: 3 /4;
   object-fit: cover;
   border-radius: 4px;
@@ -134,13 +134,19 @@
   background: white !important;
 }
 
-@media screen and (min-width: 1200px) and (max-width: 1399px) {
+@media screen and (min-width: 1200px) {
+  .ranking-number {
+    font-size: 150px;
+  }
   .ranking-poster {
     max-height: 240px;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .ranking-number {
+    font-size: 100px;
+  }
   .ranking-poster {
     max-height: 180px;
   }
