--- a/src/styles/TrailerSection.css
+++ b/src/styles/TrailerSection.css
@@ -15,6 +15,9 @@
     object-fit: cover;
     z-index: 0;
     pointer-events: none;
+    background-position: center;
+    background-size: cover;
+    color: white;
 }
 
 .trailer-wrapper {
@@ -30,6 +33,7 @@
     padding: 60px 0 120px 60px;
     box-sizing: border-box;
     color: white;
+    font-size: 1.2rem;
 }
 
 .trailer-left {
@@ -112,14 +116,17 @@
     width: 600px;
     max-width: 90vw;
     margin-bottom: 24px;
-    transition: width 0.7s cubic-bezier(0.4, 0, 0.2, 1),
-        margin-bottom 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: width 0.7s cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .title-logo {
     width: 100%;
     height: auto;
     display: block;
+    position: relative;
+    right: 15px;
 }
+
 .trailer-description {
     color: #fff;
     font-size: 1.2rem;
@@ -140,3 +147,174 @@
 .trailer-left.shrink .trailer-description {
     display: none;
 }
+
+
+@media screen and (max-width: 768px) {
+    .trailer {
+        height: 300px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+  
+    .trailer-wrapper {
+        padding: 0 50px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        width: 100%;
+        height: 100%;
+    }
+  
+    .trailer-left {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      text-align: left;
+    }
+
+    .play-btn, .info-btn {
+        font-size: 11px;
+        white-space: nowrap;
+        padding: 4px 8px;
+        gap: 8px
+    }
+
+    .play-btn svg, .info-btn svg {
+        width: 16px;
+        height: 16px;
+    }
+
+    .play-btn {
+        width: 69px;
+        height: 25px;
+    }
+      
+    .info-btn {
+        width: 83px;
+        height: 25px;
+    }
+
+    .trailer-controls {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        position: relative;
+        gap: 30px;
+    }
+    
+    .trailer-controls-btns {
+        display: flex;
+        position: absolute;
+        gap: 12px;
+        right: 4rem;
+        align-items: center;
+    }
+
+    .trailer-controls-btns button {
+        width: 20px;
+        height: 20px;
+    }
+
+    .trailer-controls-btns svg {
+        width: 12px;
+    }
+
+    .age-badge {
+        width: 25px;
+        height: 10px;
+        padding: 8px 30px;
+        border-left: 2px solid white;
+        
+        text-align: left;
+        font-size: 12px;
+        color: white;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .trailer {
+        height: 270px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+  
+    .trailer-wrapper {
+        padding: 0 50px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        width: 100%;
+        height: 100%;
+    }
+
+    .trailer-description {
+        font-size: 13px;
+    }
+  
+    .trailer-left {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      text-align: left;
+    }
+
+    .play-btn, .info-btn {
+        font-size: 11px;
+        white-space: nowrap;
+        padding: 4px 8px;
+        gap: 8px
+    }
+
+    .play-btn svg, .info-btn svg {
+        width: 16px;
+        height: 16px;
+    }
+
+    .play-btn {
+        width: 76px;
+        height: 27px;
+    }
+      
+    .info-btn {
+        width: 101px;
+        height: 27px;
+    }
+
+    .trailer-controls {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        position: relative;
+        gap: 30px;
+    }
+    
+    .trailer-controls-btns {
+        display: flex;
+        position: absolute;
+        gap: 12px;
+        right: 1rem;
+        align-items: center;
+    }
+
+    .trailer-controls-btns button {
+        width: 20px;
+        height: 20px;
+    }
+
+    .trailer-controls-btns svg {
+        width: 12px;
+    }
+
+    .age-badge {
+        width: 20px;
+        height: 15px;
+        padding: 4px 20px;
+        border-left: 2px solid white;
+        
+        text-align: left;
+        font-size: 12px;
+        color: white;
+    }
+  }
