--- a/src/styles/RankingRow.css
+++ b/src/styles/RankingRow.css
@@ -13,6 +13,8 @@
 .ranking-title h2 {
   color: white;
   padding-left: 20px;
+  font-size: 25px;
+  font-weight: 500;
 }
 
 .row {
@@ -92,7 +94,7 @@
 
 .ranking-poster {
   width: 100%;
-  height: 240px !important;
+  height: 163px !important;
   aspect-ratio: 3 /4;
   object-fit: cover;
   border-radius: 4px;
