--- a/src/styles/TrailerSection.css
+++ b/src/styles/TrailerSection.css
@@ -106,10 +106,16 @@
 .age-badge {
     background-color: rgba(51, 51, 51, 0.6);
     border-left: 2px solid white;
-    padding: 12px 36px 12px 12px;
+    height: 40px;;
+    padding: 0px 36px 0px 12px;
     min-width: 78px;
     font-size: 18px;
     font-weight: bold;
+}
+
+.age-img {
+    width: 40px;
+    height: 40px;
 }
 
 .billboard-title {
@@ -151,7 +157,7 @@
 
 @media screen and (max-width: 768px) {
     .trailer {
-        height: 300px;
+        height: 350px;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
@@ -164,8 +170,24 @@
         align-items: flex-end;
         width: 100%;
         height: 100%;
+        top: -10px;
     }
   
+    .billboard-title {
+        margin-bottom: 5px;
+    }
+
+    .billboard-title img {
+        width: 150px;
+        height: 100%;    
+    }
+
+    .trailer-description {
+        font-size: 11px;
+        font-weight: 500;
+        max-width: 210px;
+    }
+
     .trailer-left {
       display: flex;
       flex-direction: column;
@@ -173,11 +195,21 @@
       text-align: left;
     }
 
-    .play-btn, .info-btn {
-        font-size: 11px;
-        white-space: nowrap;
+    .trailer-actions-btns {
+        margin-top: -35px;
+    }
+
+    .play-btn,
+    .info-btn {
         padding: 4px 8px;
         gap: 8px
+    }
+
+    .play-btn span,
+    .info-btn span {
+        font-size: 11px;
+        font-weight: 600;
+        white-space: nowrap;
     }
 
     .play-btn svg, .info-btn svg {
@@ -203,34 +235,39 @@
         gap: 30px;
     }
     
-    .trailer-controls-btns {
+    .trailer-right {
         display: flex;
-        position: absolute;
-        gap: 12px;
-        right: 4rem;
         align-items: center;
     }
 
-    .trailer-controls-btns button {
+    .mute-btn {
+        width: 30px;
+        height: 30px;
+        position: relative;
+        right: 80px;
+    }
+
+    .mute-btn svg {
         width: 20px;
         height: 20px;
     }
 
-    .trailer-controls-btns svg {
-        width: 12px;
-    }
-
     .age-badge {
+        display: flex;
         width: 25px;
         height: 10px;
-        padding: 8px 30px;
+        padding: 8px 14px;
         border-left: 2px solid white;
-        
-        text-align: left;
-        font-size: 12px;
-        color: white;
+        position: absolute;
+        right: 0px;
+        align-items: center;
     }
-  }
+
+    .age-img {
+        width: 25px;
+        height: 25px;
+    }
+}
 
   @media screen and (max-width: 480px) {
     .trailer {
@@ -240,81 +277,44 @@
         align-items: flex-end;
     }
   
-    .trailer-wrapper {
-        padding: 0 50px 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-        width: 100%;
-        height: 100%;
+    .billboard-title {
+        margin-bottom: -10px;
+    }
+
+    .billboard-title img {
+        width: 150px;
+        height: 100%;    
     }
 
     .trailer-description {
-        font-size: 13px;
-    }
-  
-    .trailer-left {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      text-align: left;
+        font-size: 8px;
+        font-weight: 500;
+        max-width: 210px;
     }
 
-    .play-btn, .info-btn {
-        font-size: 11px;
-        white-space: nowrap;
-        padding: 4px 8px;
-        gap: 8px
-    }
-
-    .play-btn svg, .info-btn svg {
-        width: 16px;
-        height: 16px;
-    }
-
-    .play-btn {
-        width: 76px;
-        height: 27px;
-    }
-      
-    .info-btn {
-        width: 101px;
-        height: 27px;
-    }
-
-    .trailer-controls {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
+    .mute-btn {
+        width: 25px;
+        height: 25px;
         position: relative;
-        gap: 30px;
-    }
-    
-    .trailer-controls-btns {
-        display: flex;
-        position: absolute;
-        gap: 12px;
-        right: 1rem;
-        align-items: center;
+        right: 40px;
     }
 
-    .trailer-controls-btns button {
+    .mute-btn svg {
+        width: 15px;
+        height: 15px;
+    }
+
+    .age-img {
         width: 20px;
-        height: 20px;
-    }
-
-    .trailer-controls-btns svg {
-        width: 12px;
+        height: auto;
     }
 
     .age-badge {
+        display: flex;
+        right: -20px;
+        height: 20px;
         width: 20px;
-        height: 15px;
-        padding: 4px 20px;
+        padding: 0px 10px;
         border-left: 2px solid white;
-        
-        text-align: left;
-        font-size: 12px;
-        color: white;
     }
   }
