--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-body {
+html, body {
     margin: 0;
-    padding: 0;
+    padding: 0;;
     background-color: #141414; 
     color: #fff;
     font-family: 'Helvetica Neue', sans-serif;
