--- a/src/styles/RankingRow.css
+++ b/src/styles/RankingRow.css
@@ -19,6 +19,9 @@
 
 .row {
   position: relative;
+  width: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .slide-btn-left,
@@ -80,7 +83,6 @@
   display: flex;
   align-items: center;
   margin-right: 10px;
-  width: 100%;
 }
 
 .ranking-number {
@@ -89,6 +91,7 @@
   color: black;
   -webkit-text-stroke: 2px gray;
   flex-shrink: 0;
+  transform: scale(1.4) translateY(-4%);
   z-index: 0;
 }
 
@@ -136,20 +139,42 @@
   background: white !important;
 }
 
-@media screen and (min-width: 1200px) {
-  .ranking-number {
-    font-size: 150px;
-  }
-  .ranking-poster {
-    max-height: 240px;
-  }
-}
 
-@media screen and (max-width: 768px) {
-  .ranking-number {
-    font-size: 100px;
+@media screen and (max-width: 1399px) {
+    .swiper-slide {
+      width: calc((100% - 4 * 30px) / 5);
+    }
+    .ranking-number {
+        font-size: 150px;
+     }
+    .ranking-poster {
+      max-height: 240px;
+    }
   }
-  .ranking-poster {
-    max-height: 180px;
+  
+
+  @media screen and (max-width: 1099px) {
+    .swiper-slide {
+      width: calc((100% - 3 * 30px) / 4);
+    }
   }
-}
+  
+
+  @media screen and (max-width: 799px) {
+    .swiper-slide {
+      width: calc((100% - 2 * 30px) / 3);
+    }
+    .ranking-number {
+      font-size: 100px;
+      }
+    .ranking-poster {
+      max-height: 180px;
+    }
+
+  }
+  
+  @media screen and (max-width: 499px) {
+    .swiper-slide {
+      width: calc((100% - 1 * 30px) / 2);
+    }
+  }
