--- a/src/styles/TrailerSection.css
+++ b/src/styles/TrailerSection.css
@@ -76,6 +76,11 @@
     font-size: 28px;
 }
 
+.trailer-actions-btns {
+    display: flex;
+    position: relative;
+    left: -15px;
+}
 .play-btn {
     background-color: white;
     color: black;
@@ -148,11 +153,23 @@
 .trailer-left.shrink .billboard-title {
     width: 320px;
     margin-bottom: 8px;
-    transform: none;
+    transform: translateY(-20px);
 }
 .trailer-left.shrink .trailer-description {
     display: none;
 }
+
+.billboard-title.playing {
+    position: relative;
+    top: 10px;
+    transition: top 0.5s ease;
+  }
+  
+  .billboard-title.ended {
+    position: relative;
+    top: 40px; /* 끝났을 때는 내려옴 */
+    transition: top 0.5s ease;
+  }
 
 
 @media screen and (max-width: 768px) {
@@ -170,22 +187,24 @@
         align-items: flex-end;
         width: 100%;
         height: 100%;
-        top: -10px;
+        top: -60px;
     }
-  
+
     .billboard-title {
-        margin-bottom: 5px;
+        margin-bottom: 0px;
+        height: 50px;
     }
 
     .billboard-title img {
         width: 150px;
-        height: 100%;    
+        height: 100%;  
+        margin-bottom: 20px;  
     }
 
     .trailer-description {
         font-size: 11px;
         font-weight: 500;
-        max-width: 210px;
+        width: auto;
     }
 
     .trailer-left {
@@ -197,6 +216,7 @@
 
     .trailer-actions-btns {
         margin-top: -35px;
+
     }
 
     .play-btn,
@@ -276,20 +296,16 @@
         justify-content: space-between;
         align-items: flex-end;
     }
-  
-    .billboard-title {
-        margin-bottom: -10px;
-    }
 
     .billboard-title img {
         width: 150px;
-        height: 100%;    
+        height: 100%;  
     }
 
     .trailer-description {
-        font-size: 8px;
+        font-size: 7px;
         font-weight: 500;
-        max-width: 210px;
+        width: auto;
     }
 
     .mute-btn {
